style.css
/*General Rules*/
* {
  font-size: 16px;
  font-family: "Rubik", sans-serif;
  box-sizing: border-box;
}
html,
body {
  margin: 0;
  height: 100%;
  overflow: hidden;
  background-color: hsl(270, 20%, 96%);
}
h1 {
  color: hsl(271, 36%, 24%);
  font-size: 2.5rem;
  margin: 0;
}
p {
  color: hsl(270, 7%, 64%);
  margin: 0;
}
/*The Grid Layout*/
main {
  display: grid;
  grid-template-columns: 50% 50%;
  height: 100vh;
}
#text {
  height: fit-content;
  margin: auto;
  padding: 0 32% 0 6%;
  line-height: 1.8;
}
#app-container {
  background-color: transparent;
}
/*Background Shapes*/
.shape {
  background: linear-gradient(30deg, hsl(264, 100%, 61%), hsl(293, 100%, 63%));
  height: 90vh;
  width: 32vw;
  border-radius: 0 0 17vw 17vw;
}
#app-bg {
  position: fixed;
  left: -7%;
  top: 0;
  z-index: 0;
}
#text-bg {
  position: fixed;
  right: -12%;
  top: 15%;
  transform: rotate(180deg);
  opacity: 5%;
}
/*Phone Illustration*/
#phone {
  position: absolute;
  top: 8%;
  bottom: 8%;
  left: 21.5%;
  margin: auto;
  width: 270px;
  height: 520px;
  border: 9px solid white;
  border-radius: 32px;
  background-color: hsl(270, 20%, 96%);
  overflow: hidden;
  z-index: 5;
}
#header {
  background: linear-gradient(
    90deg,
    rgba(136, 56, 255, 1) 45%,
    rgba(233, 66, 255, 1) 100%
  );
  width: 100%;
  height: 15%;
  border-radius: 0 0 10px 10px;
  box-shadow: 0px 12px 31px -5px rgba(133, 133, 133, 0.5);
}
#header-content {
  padding: 10px;
}
#header-content img {
  display: inline-block;
  vertical-align: middle;
  margin-left: 5px;
  width: 35px;
  height: 35px;
  border: 1px solid white;
  border-radius: 100%;
}
#header-content svg {
  display: inline-block;
  color: white;
  vertical-align: middle;
  font-size: 1.2em;
}
#header-text {
  display: inline-block;
  vertical-align: middle;
  color: white;
  padding: 0 0 0 10px;
}
#header-text h3 {
  font-weight: 500;
  margin: 2% 0;
  font-size: 14px;
}
#header-text p {
  margin: 2% 0;
  font-weight: 400;
  font-size: 12px;
  color: hsl(276, 100%, 81%);
}
#dots {
  position: absolute;
  left: 90%;
  top: 9%;
}
#mic {
  margin: auto;
  width: 65%;
  height: 30%;
  border-radius: 0 0 40px 40px;
  background-color: white;
}
#screen {
  margin: 0;
  padding: 3%;
  width: 100%;
  height: 82%;
  background-color: hsl(270, 20%, 96%);
}
.received-txt {
  background-color: rgba(218, 163, 255, 0.2);
  max-width: 60%;
  padding: 3%;
  margin: 2%;
  border-radius: 10px 15px 15px 2px;
  font-size: 0.6em;
  color: hsl(276, 55%, 52%);
}
#img-sent {
  text-align: right;
  margin: 3% 0;
}
.sent-pics {
  margin: 1px 0;
  width: 17%;
  border: 1px solid white;
  border-radius: 10px;
}
.sent-txt {
  display: inline-block;
  background-color: white;
  max-width: 55%;
  margin: 1% 0;
  padding: 3%;
  border-radius: 10px 15px 2px 15px;
  font-size: 0.6em;
  color: hsl(271, 15%, 43%);
}
.prices {
  background: linear-gradient(
    90deg,
    rgba(136, 56, 255, 1) 45%,
    rgba(233, 66, 255, 1) 100%
  );
  width: 75%;
  border-radius: 10px 15px 15px 2px;
  color: white;
  padding: 10px 8px;
  margin: 6px 0 5px 0;
  vertical-align: middle;
}
.options {
  display: inline-block;
  font-size: 11px;
  color: white;
  opacity: 75%;
}
.price {
  display: inline-block;
  font-weight: 700;
  font-size: 16px;
  color: white;
  position: relative;
}
#pr1 {
  left: 11%;
}
#pr2 {
  left: 28%;
}
.circle {
  vertical-align: middle;
  margin-right: 5px;
  opacity: 50%;
}
#msg-bar {
  display: flex;
  flex-direction: row-reverse;
  justify-content: space-between;
  align-items: center;
  background-color: white;
  margin: 5% auto;
  padding: 0 5px 0 15px;
  width: 100%;
  height: 9%;
  border-radius: 40px;
}
#send-it-btn {
  background-color: hsl(271, 36%, 24%);
  height: 2rem;
  width: 2rem;
  border-radius: 100%;
}
#arrow-icon {
  color: white;
  font-size: 1.2em;
  position: relative;
  top: 18%;
  left: 40%;
}
#placeholder-text {
  color: hsl(206, 6%, 79%);
  font-size: 12px;
}
/*Mobile View*/

@media (max-width: 500px) {
  * {
    font-size: 16px;
    font-family: "Rubik", sans-serif;
    box-sizing: border-box;
  }
  html,
  body {
    margin: 0;
    height: 100%;
    overflow: visible;
    background-color: hsl(270, 20%, 96%);
  }
  h1 {
    color: hsl(271, 36%, 24%);
    font-size: 2rem;
    margin-bottom: 2%;
  }
  p {
    color: hsl(270, 7%, 64%);
    margin: 0;
  }
  /*The Grid Layout*/
  main {
    position: fixed;
    display: flex;
    flex-direction: column;
    height: 100%;
    overflow-Y: scroll;
  }
  #text {
    width: 100vw;
    height: fit-content;
    margin: 0px auto 30px 0;
    padding: 0 8vw;
    line-height: 1.8;
    text-align: center;
    z-index: 2;
  }
  #app-container {
    width: 100vw;
    height: fit-content;
    padding: 0px;
    margin: 30px 0px;
  }
  /*Background Shapes*/
  .shape {
    background: linear-gradient(
      30deg,
      hsl(264, 100%, 61%),
      hsl(293, 100%, 63%)
    );
    width: 100vw;
    height: 510px;
    border-radius: 0 0 60vw 60vw;
  }
  #app-bg {
    position: absolute;
    left: -50%;
    top: 0;
    opacity: 90%;
    z-index: 0;
  }
  #text-bg {
    height: 425px;
    position: absolute;
    right: -50%;
    top: 465px;
    transform: rotate(180deg);
    opacity: 5%;
    z-index: 0;
  }
  /*Phone Illustration*/
  #phone {
    position: relative;
    top: 0;
    bottom: 0;
    left: 0;
    margin: auto;
    width: 260px;
    height: 525px;
    border: 9px solid white;
    border-radius: 32px;
    background-color: hsl(270, 20%, 96%);
    overflow: hidden;
    z-index: 5;
    -webkit-box-shadow: 0px 10px 43px 0px rgba(0, 0, 0, 0.3);
    -moz-box-shadow: 0px 10px 43px 0px rgba(0, 0, 0, 0.3);
    box-shadow: 0px 10px 43px 0px rgba(0, 0, 0, 0.3);
  }
  #header {
    background: linear-gradient(
      90deg,
      rgba(136, 56, 255, 1) 45%,
      rgba(233, 66, 255, 1) 100%
    );
    width: 100%;
    height: 15%;
    border-radius: 0 0 10px 10px;
    box-shadow: 0px 12px 31px -5px rgba(133, 133, 133, 0.5);
  }
  #header-content {
    padding: 10px;
  }
  #header-content img {
    display: inline-block;
    vertical-align: middle;
    margin-left: 5px;
    width: 35px;
    height: 35px;
    border: 1px solid white;
    border-radius: 100%;
  }
  #header-content svg {
    display: inline-block;
    color: white;
    vertical-align: middle;
    font-size: 1.2em;
  }
  #header-text {
    display: inline-block;
    vertical-align: middle;
    color: white;
    padding: 0 0 0 10px;
  }
  #header-text h3 {
    font-weight: 500;
    margin: 2% 0;
    font-size: 14px;
  }
  #header-text p {
    margin: 2% 0;
    font-weight: 400;
    font-size: 12px;
    color: hsl(276, 100%, 81%);
  }
  #dots {
    position: absolute;
    left: 90%;
    top: 9%;
  }
  #mic {
    margin: auto;
    width: 65%;
    height: 30%;
    border-radius: 0 0 40px 40px;
    background-color: white;
  }
  #screen {
    margin: 0;
    padding: 3%;
    width: 100%;
    height: 82%;
    background-color: hsl(270, 20%, 96%);
  }
  .received-txt {
    background-color: rgba(218, 163, 255, 0.2);
    max-width: 60%;
    padding: 3%;
    margin: 2%;
    border-radius: 10px 15px 15px 2px;
    font-size: 0.6em;
    color: hsl(276, 55%, 52%);
  }
  #img-sent {
    text-align: right;
    margin: 3% 0;
  }
  .sent-pics {
    margin: 1px 0;
    width: 17%;
    border: 1px solid white;
    border-radius: 10px;
  }
  .sent-txt {
    display: inline-block;
    background-color: white;
    max-width: 55%;
    margin: 1% 0;
    padding: 3%;
    border-radius: 10px 15px 2px 15px;
    font-size: 0.6em;
    color: hsl(271, 15%, 43%);
  }
  .prices {
    background: linear-gradient(
      90deg,
      rgba(136, 56, 255, 1) 45%,
      rgba(233, 66, 255, 1) 100%
    );
    width: 80%;
    border-radius: 10px 15px 15px 2px;
    color: white;
    padding: 10px 8px;
    margin: 6px 0 5px 0;
    vertical-align: middle;
  }
  .options {
    display: inline-block;
    font-size: 11px;
    color: white;
    opacity: 75%;
  }
  .price {
    display: inline-block;
    font-weight: 700;
    font-size: 16px;
    color: white;
    position: relative;
  }
  #pr1 {
    left: 11%;
  }
  #pr2 {
    left: 28%;
  }
  .circle {
    vertical-align: middle;
    margin-right: 5px;
    opacity: 50%;
  }
  #msg-bar {
    display: flex;
    flex-direction: row-reverse;
    justify-content: space-between;
    align-items: center;
    background-color: white;
    margin: 5% auto;
    padding: 0 5px 0 15px;
    width: 100%;
    height: 9%;
    border-radius: 40px;
  }
  #send-it-btn {
    background-color: hsl(271, 36%, 24%);
    height: 2rem;
    width: 2rem;
    border-radius: 100%;
  }
  #arrow-icon {
    color: white;
    font-size: 1.2em;
    position: relative;
    top: 18%;
    left: 40%;
  }
  #placeholder-text {
    color: hsl(206, 6%, 79%);
    font-size: 12px;
  }
}

